tests/samples/negative/types/recursive_struct_array_value.ax
module recursive_struct_array_value;

struct Node {
  next: [1]Node;
}

fn main() -> i32 {
  return 0;
}
